After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680346 - gtk+-2.24.11 (commit 3f6592f6) breaks keyboard input in pidgin
gtk+-2.24.11 (commit 3f6592f6) breaks keyboard input in pidgin
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: X11
2.24.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-07-20 22:58 UTC by Alexandre Rostovtsev
Modified: 2012-07-21 00:01 UTC
See Also:
GNOME target: ---
GNOME version: 3.3/3.4


Attachments
graphical description for how to reproduce (408.85 KB, image/png)
2012-07-20 22:58 UTC, Alexandre Rostovtsev
  Details
backport of 16458b0d to gtk-2-24 branch (1.76 KB, patch)
2012-07-20 23:54 UTC, Alexandre Rostovtsev
none Details | Review

Description Alexandre Rostovtsev 2012-07-20 22:58:41 UTC
Created attachment 219357 [details]
graphical description for how to reproduce

(As reported downstream at https://bugs.gentoo.org/show_bug.cgi?id=427148)

Several Gentoo users have reported keyboard input problems in pidgin and gajim after updating from gtk+-2.24.10 to gtk+-2.24.11.

I have found that I can reliably reproduce the issue with pidgin-2.10.6 via the following sequence of actions:

0. launch pidgin
1. open a chat window with one of your contacts
2. start typing a message
3. in the main "buddy list" window, click on the status pulldown at the bottom; optionally, change your status.
4. chat window stops responding to all keyboard input, both in the message entry box and to standard keyboard shortcuts (Ctrl-W etc.)
5. clicking on any menu button or the font toolbar button in the chat window, or right-clicking inside the entry input box to bring up the input method menu, allows keyboard input again.

Using git-bisect to find the commit between 2.24.10 and 2.24.11 that introduced the problem, it appears that the culprit is the following: http://git.gnome.org/browse/gtk+/commit/?h=gtk-2-24&id=3f6592f60fd15fb353fc84600caefba3054dc892 ("Iconification using _NET_WM_STATE_HIDDEN hint if supported by WM").
Comment 1 Alexandre Rostovtsev 2012-07-20 23:54:08 UTC
Created attachment 219358 [details] [review]
backport of 16458b0d to gtk-2-24 branch

The attached patch, which is a gtk-2-24 backport of http://git.gnome.org/browse/gtk+/commit/?id=16458b0de2203a0956c55f21d18e6af916e4c066 (the commit that had fixed a similar issue in gtk3 master), fixes the problem.
Comment 2 Matthias Clasen 2012-07-20 23:59:45 UTC
Ah, I must have overlooked that when collecting material for cherry-picking. 
Thanks for tracking it down.